bolder font weight for captions

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -145,7 +145,8 @@ main.project {
     }
 
     figcaption {
-        margin: 0.5em 0 1.5em;
+        margin: 0.25em 0 1.5em;
+        font-weight: 600;
     }
 
     .external-link {
