fix article body border

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -132,7 +132,7 @@ main.project {
 
         .article-body {
             padding-bottom: 1em;
-            border: $separator-border;
+            border-bottom: $separator-border;
         }
     }
 
