--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -17,7 +17,8 @@ main.resume {
 
     h2 {
         margin: 1.4em 0 0.75em 0;
-        font-size: 1.7em;
+        font-size: 1.75em;
+        line-height: 1.2;
     }
 
     h3 {
@@ -25,12 +26,16 @@ main.resume {
     }
 
     h4 {
-      font-size: 1em;
-      line-height: 1.25;
+      font-size: 1.1em;
+      line-height: 1.3;
     }
 
     h3, h4 {
         margin-bottom: 0.5em;
+    }
+
+    li {
+        margin-bottom: 0.35em;
     }
 
     h3.position {
@@ -47,8 +52,8 @@ main.resume {
         h1 {
           font-family: $oxygen;
           text-align: center;
-          margin-bottom: 0;
-          font-size: 3em;
+          margin: 0.2em 0;
+          font-size: 4em;
           font-weight: bold;
         }
       
@@ -104,10 +109,6 @@ main.resume {
             list-style-type: square;
             padding: 0 0 0 1.2em;
             margin: 0.6em 0;
-    
-            li {
-                margin-bottom: 0.35em;
-            }
         }
     }
 
@@ -121,9 +122,12 @@ main.resume {
         color: #aaa;
     }
 
+    ul.skills, ul.projects {
+        list-style-type: none;
+    }
+
     .project-name {
         font-weight: bold;
-        margin-right: 0.4em;
     }
 
     .print {
