--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,8 +1,9 @@
 $on-palm:          600px;
 $on-laptop:        800px;
 
-$primary-color: rgb(0, 100, 180);
-$separator-border: 1px solid rgba(0, 0, 0, 0.15);
+$primary-color: #6653ff;
+$separator-border: 2px solid $primary-color;
+$mono: "SFMono-Regular", Consolas, Menlo, Courier, "Courier New", monospace;
 
 // Use media queries like this:
 // @include media-query($on-palm) {
@@ -28,18 +29,20 @@ body {
     background: url('/img/website_background.svg') repeat;
     background-size: cover;
     min-height: 100vh;
-    font-family: 'Muli', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-shadow: 0 0 4px white;
     margin: 2em;
     font-size: 1.1em;
 }
 
 a {
+    text-decoration: none;
     color: inherit;
+    border-bottom: 2px solid $primary-color;
 }
 
 a:hover {
-    background-color: rgba(lighten($primary-color, 25%), 0.2);
+    color: $primary-color;
     text-shadow: none;
 }
 
@@ -48,7 +51,7 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Overpass', sans-serif;
+    font-family: 'Lora', sans-serif;
     line-height: 1;
     margin-bottom: 0.5em;
 }
@@ -56,6 +59,8 @@ h1, h2, h3, h4, h5, h6 {
 h1.name {
     font-size: 4em;
     margin: 0;
+    border-bottom: 4px solid $primary-color;
+    padding-bottom: 0.1em;
 }
 
 h1 {
@@ -70,14 +75,19 @@ h3 {
     font-size: 1.5em;
 }
 
+code {
+    font-family: $mono;
+}
+
 ul {
+    line-height: 1.4;
     list-style-type: square;
 }
 
 nav {
     margin-bottom: 1.5em;
     // specificity overrides for resume styles
-    font-family: 'Muli', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 1.1rem;
 
     ul {
@@ -97,19 +107,30 @@ main {
 }
 
 main.front, main.credits {
-    max-width: 400px;
+    max-width: 640px;
 }
 
 main.front {
     .tagline {
-        font-size: 1.4em;
+        margin-top: 0.5em;
+        font-size: 1.35em;
         font-weight: 600;
         line-height: 1.3;
+    }
+
+    .lede {
+        line-height: 1.5;
+        font-size: 1.1em;
+        margin-bottom: 2em;
     }
     
     ul.projects {
         li {
             margin: 0.5em 0;
+        }
+
+        a {
+            font-weight: bold;
         }
     }
 }
@@ -135,6 +156,10 @@ main.project {
             margin: 0.5em 0;
             border-bottom: $separator-border;
         }
+
+        li {
+            margin: 0.25em 0;
+        }
     }
 
     aside {
@@ -157,8 +182,8 @@ main.project {
     }
 
     .project-link {
-        display: block;
         display: inline-block;
+        font-size: 1.2em;
         margin: 0.5em 0;
         font-weight: 600;
     }
@@ -192,7 +217,7 @@ main.credits {
 }
 
 footer {
-    color: rgba(0, 0, 0, 0.5);
+    opacity: 0.5;
     margin: 2em 0 4em;
     text-align: right;
     max-width: 370px;
