--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -31,7 +31,7 @@ body {
     min-height: 100vh;
     font-family: 'Lato', sans-serif;
     text-shadow: 0 0 4px white;
-    margin: 2em;
+    margin: 1em;
     font-size: 1.1em;
 }
 
@@ -156,7 +156,7 @@ main.project {
         }
 
         .article-body {
-            margin: 0.5em 0;
+            margin: 0.5em 0 2em; // bottom margin for mobile
             border-bottom: $separator-border;
         }
 
