--- a/src/styles/resume.scss
+++ b/src/styles/resume.scss
@@ -1,212 +1,223 @@
-$helvetica: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$oxygen: 'Oxygen', $helvetica;
+$helvetica: "Helvetica Neue", Helvetica, Arial, sans-serif;
+$oxygen: "Oxygen", $helvetica;
 
 main.resume {
-    font-size: 1rem;
-    margin: 0 auto;
-    max-width: 960px;
-    position: relative;
-    font-family: $helvetica;
-    line-height: 1.4;
+  font-size: 1rem;
+  margin: 0 auto;
+  max-width: 960px;
+  position: relative;
+  font-family: $helvetica;
+  line-height: 1.4;
 
-    h1, h2, h3, h4, h5, h6 {
-        margin: 0;
-        font-family: $oxygen;
-        font-weight: normal;
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    margin: 0;
+    font-family: $oxygen;
+    font-weight: normal;
+  }
+
+  h2 {
+    margin: 1em 0 0.5em 0;
+    font-size: 1.75em;
+    line-height: 1.2;
+  }
+
+  h3 {
+    font-size: 1.17em;
+  }
+
+  h4 {
+    font-size: 1.1em;
+    line-height: 1.3;
+  }
+
+  h3,
+  h4 {
+    margin-bottom: 0.5em;
+  }
+
+  li {
+    margin-bottom: 0.35em;
+  }
+
+  h3.position {
+    margin-bottom: 0.2em;
+  }
+
+  h4.company {
+    margin-bottom: 0;
+  }
+
+  .header-resume {
+    display: none;
+
+    h1 {
+      font-family: $oxygen;
+      text-align: center;
+      margin: 0.2em 0;
+      font-size: 3.5em;
+      font-weight: bold;
     }
 
-    h2 {
-        margin: 1em 0 0.5em 0;
-        font-size: 1.75em;
-        line-height: 1.2;
-    }
+    #contact {
+      list-style-type: none;
+      padding: 0;
+      text-align: center;
+      font-size: 1em;
+      margin: 0.5em 0 0;
+      font-family: $helvetica;
 
-    h3 {
-      font-size: 1.17em;
-    }
+      img {
+        width: 18px;
+        vertical-align: text-bottom;
+        margin-right: 0.2em;
+      }
 
-    h4 {
-      font-size: 1.1em;
-      line-height: 1.3;
-    }
-
-    h3, h4 {
-        margin-bottom: 0.5em;
-    }
-
-    li {
-        margin-bottom: 0.35em;
-    }
-
-    h3.position {
-        margin-bottom: 0.2em;
-    }
-
-    h4.company {
-        margin-bottom: 0;
-    }
-
-    .header-resume {
-        display: none;
-      
-        h1 {
-          font-family: $oxygen;
-          text-align: center;
-          margin: 0.2em 0;
-          font-size: 3.5em;
-          font-weight: bold;
-        }
-      
-        #contact {
-          list-style-type: none;
-          padding: 0;
-          text-align: center;
-          font-size: 1em;
-          margin: 0.5em 0 0;
-          font-family: $helvetica;
-      
-          img {
-              width: 18px;
-              vertical-align: text-bottom;
-              margin-right: 0.2em;
-          }
-      
-          li {
-              display: inline-block;
-              padding: 0 0.5em;
-          }
-        }
-      
-        @media print {
-          display: block;
-        }
-    }
-
-    .col {
-        $LEFT_COL_WIDTH: 63%;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        float: left;
-
-        &.left {
-            padding-right: 3.5em;
-            width: $LEFT_COL_WIDTH;
-        }
-
-        &.right {
-            padding-right: 1em;
-            width: 100% - $LEFT_COL_WIDTH;
-        }
-    }
-
-    .item {
-        margin-bottom: 2em;
-        border-left: 1px solid #aaa;
-        padding-left: 1em;
-
-        ul {
-            list-style-type: square;
-            padding: 0 0 0 1.2em;
-            margin: 0.6em 0;
-        }
-    }
-
-    .position, .school {
-        font-weight: bold;
-    }
-
-    .date {
-        font-weight: normal;
-        float: right;
-        color: #aaa;
-    }
-
-    ul.skills, ul.projects {
-        list-style-type: none;
-    }
-
-    .project-name {
-        font-weight: bold;
-    }
-
-    .print {
-        float: right;
-        cursor: pointer;
-        font-weight: bold;
-
-        img {
-            padding-left: 1px;
-            vertical-align: bottom;
-        }
-    }
-
-    .more {
-        clear: both;
-        overflow: hidden;
-
-        .experience {
-            float: left;
-        }
-
-        .projects {
-            float: right;
-        }
-    }
-
-    .footer {
-        clear: both;
-        padding: 1.5em 0;
-        font-size: 0.7em;
-        text-align: center;
-    }
-
-    @include media-query($on-palm) {
-        .col {
-            float: none;
-
-            &.left, &.right {
-                width: 100%;
-                padding: 0;
-            }
-        }
-
-        .item {
-            padding-left: 0.5em;
-        }
-
-        .date {
-            font-size: 85%;
-        }
+      li {
+        display: inline-block;
+        padding: 0 0.5em;
+      }
     }
 
     @media print {
-        padding: 0;
-        line-height: 1.2;
-        font-size: 0.8rem;
-
-        a {
-          box-shadow: none;
-          text-decoration: underline;
-        }
-
-        .page-title, nav, footer {
-            display: none;
-        }
-
-        .item {
-            border-left: 1px solid #bbb;
-        }
-
-        .print {
-            display: none;
-        }
+      display: block;
     }
+  }
+
+  .col {
+    $LEFT_COL_WIDTH: 63%;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    float: left;
+
+    &.left {
+      padding-right: 3.5em;
+      width: $LEFT_COL_WIDTH;
+    }
+
+    &.right {
+      padding-right: 1em;
+      width: 100% - $LEFT_COL_WIDTH;
+    }
+  }
+
+  .item {
+    margin-bottom: 2em;
+    border-left: 1px solid #aaa;
+    padding-left: 1em;
+
+    ul {
+      list-style-type: square;
+      padding: 0 0 0 1.2em;
+      margin: 0.6em 0;
+    }
+  }
+
+  .position,
+  .school {
+    font-weight: bold;
+  }
+
+  .date {
+    font-weight: normal;
+    float: right;
+    color: #aaa;
+  }
+
+  ul.skills,
+  ul.projects {
+    list-style-type: none;
+  }
+
+  .project-name {
+    font-weight: bold;
+  }
+
+  .print {
+    float: right;
+    cursor: pointer;
+    font-weight: bold;
+
+    img {
+      padding-left: 1px;
+      vertical-align: bottom;
+    }
+  }
+
+  .more {
+    clear: both;
+    overflow: hidden;
+
+    .experience {
+      float: left;
+    }
+
+    .projects {
+      float: right;
+    }
+  }
+
+  .footer {
+    clear: both;
+    padding: 1.5em 0;
+    font-size: 0.7em;
+    text-align: center;
+  }
+
+  @include media-query($on-palm) {
+    .col {
+      float: none;
+
+      &.left,
+      &.right {
+        width: 100%;
+        padding: 0;
+      }
+    }
+
+    .item {
+      padding-left: 0.5em;
+    }
+
+    .date {
+      font-size: 85%;
+    }
+  }
+
+  @media print {
+    padding: 0;
+    line-height: 1.2;
+    font-size: 0.8rem;
+
+    a {
+      box-shadow: none;
+      text-decoration: underline;
+    }
+
+    .page-title,
+    nav,
+    footer {
+      display: none;
+    }
+
+    .item {
+      border-left: 1px solid #bbb;
+    }
+
+    .print {
+      display: none;
+    }
+  }
 }
 
 @media print {
-    body {
-        background: none;
-        margin: 0;
-    }
+  body {
+    background: none;
+    margin: 0;
+  }
 }
