appropriate fallback for serif font

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,7 +40,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Lora", sans-serif;
+  font-family: "Lora", serif;
   line-height: 1;
   margin-bottom: 0.5em;
 }
