remove font outline for video and audio elements

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -99,6 +99,11 @@ nav {
   }
 }
 
+video, audio {
+  // don't use the body's "faux-outline" text shadow
+  text-shadow: none;
+}
+
 main {
   margin: 0 auto;
 }
