update homepage descriptions

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -122,8 +122,8 @@ main.front {
   }
 
   .lede {
-    line-height: 1.5;
-    font-size: 1.1em;
+    line-height: 1.55;
+    font-size: 1.24rem;
     margin-bottom: 2em;
   }
 
