--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -65,7 +65,24 @@ main.project {
 
   .project-info {
     line-height: 1.45;
-    margin: 0.5em 0;
+    margin: 0.5em 0 1.5em;
+
+    dt,
+    dd {
+      display: inline;
+    }
+
+    dt {
+      font-weight: bold;
+    }
+
+    dd {
+      margin: 0;
+    }
+
+    & > * {
+      margin: 0.25em 0;
+    }
   }
 
   @include media-query($on-laptop) {
