--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -109,6 +109,7 @@ main {
   margin: 0 auto;
   box-shadow: 0 0 512px rgba($primary-color, 0.15);
   padding: 1.5rem $wrapper-horizontal-padding;
+  border: 1px solid rgba(255,255,255, 0.5);
 }
 
 @include media-query($on-laptop) {
