--- a/src/styles/project.scss
+++ b/src/styles/project.scss
@@ -59,29 +59,26 @@ main.project {
   .project-link {
     display: inline-block;
     font-size: 1.2em;
-    margin: 0.5em 0;
+    margin: 0.25em 0;
     font-weight: 600;
   }
 
   .project-info {
-    line-height: 1.45;
-    margin: 0.5em 0 1.5em;
+    line-height: 1.35;
+    margin: 0.5em 0 1em;
+    border-spacing: 0 0.5em;
 
-    dt,
-    dd {
-      display: inline;
-    }
+    td {
+      vertical-align: top;
 
-    dt {
-      font-weight: bold;
-    }
-
-    dd {
-      margin: 0;
-    }
-
-    & > * {
-      margin: 0.25em 0;
+      &:first-child {
+        font-weight: bold;
+        padding-right: 1em;
+        text-transform: uppercase;
+        font-size: 0.8em;
+        margin-top: 0.2em;
+        display: block;
+      }
     }
   }
 
