header fallback font to sans-serif

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,7 +45,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Lexend", serif;
+  font-family: "Lexend", sans-serif;
   line-height: 1;
   margin-bottom: 0.5em;
   letter-spacing: -0.02ch;
