--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -15,7 +15,7 @@ html {
 
 body {
   background: url("/img/website_background.svg") repeat;
-  background-size: cover;
+  background-size: max(1280px, 100vw) auto;
   min-height: 100vh;
   font-family: "Gabarito", sans-serif;
   font-optical-sizing: auto;
@@ -27,12 +27,13 @@ body {
 a {
   text-decoration: none;
   color: inherit;
-  border-bottom: 2px solid $primary-color;
+  border-bottom: 0.12em solid $primary-color;
+  transition: 0.1s all;
 }
 
 a:hover {
   color: $primary-color;
-  text-shadow: none;
+  border-width: 0.2em;
 }
 
 p {
@@ -111,12 +112,6 @@ hr {
   border: none;
   border-bottom: 1px solid $primary-color;
   margin: 1.5em 0;
-}
-
-video,
-audio {
-  // don't use the body's "faux-outline" text shadow
-  text-shadow: none;
 }
 
 main {
